--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="bg">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Николай Стоянов - Junior Front-End Developer. CV и портфолио с умения в HTML, CSS, JavaScript, React и повече." />
-    <title>Николай Стоянов - Junior Front-End Developer</title>
+    <meta name="description" content="Nikolay Stoyanov - Junior Front-End Developer. Lebenslauf und Portfolio mit Kenntnissen in HTML, CSS, JavaScript, React und mehr." />
+    <title>Nikolay Stoyanov - Junior Front-End Developer</title>
   </head>
   <body>
     <div id="root"></div>
