--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Николай Стоянов - Junior Front-End Developer. CV и портфолио с умения в HTML, CSS, JavaScript, React и повече." />
-    <title>Николай Стоянов - Junior Front-End Developer</title>
+    <meta name="description" content="Nikolay Stoyanov - Junior Frontend-Entwickler. Lebenslauf und Portfolio mit Fähigkeiten in HTML, CSS, JavaScript, React und mehr." />
+    <title>Nikolay Stoyanov - Junior Frontend-Entwickler</title>
   </head>
   <body>
     <div id="root"></div>
